issue#523 under review button aligned

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -189,6 +189,13 @@
   overflow: initial;
 }
 
+.btn.view-report{
+  padding: 2px 4px;
+}
+
+.table .checkbox{
+  margin-left: 0;
+}
 
 
 
